@@ -160,6 +160,13 @@ def focus_view_matching aPattern
   end
 end
 
+# Numbers the view buttons displayed on the bar, from left to right.
+def number_view_buttons
+  Wmii.fs.bar.read.each_with_index do |b, i|
+    Wmii.fs.bar[b].data = "#{i + 1}:#{b}"
+  end
+end
+
 
 ## wmii-2 style client detaching
 
